Updated package.json files in client and server side Created index.js and setupTestDb.js in server side

--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "jest",
+    "test:unit": "jest --coverage",
+    "test:integration": "jest --testPathPattern=integration"
   },
   "keywords": [],
   "author": "",
