--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "setup-test-db": "node scripts/setupTestDb.js",
+    "test": "jest",
+    "test:unit": "jest --coverage",
+    "test:integration": "jest --testPathPattern=integration"
   },
   "keywords": [],
   "author": "",
