--- a/server/package.json
+++ b/server/package.json
@@ -14,5 +14,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "packageManager": "pnpm@10.13.1"
+  "packageManager": "pnpm@10.13.1",
+  "dependencies": {
+    "mongoose": "^8.16.3"
+  }
 }
