--- a/server/package.json
+++ b/server/package.json
@@ -17,5 +17,10 @@
   "packageManager": "pnpm@10.13.1",
   "dependencies": {
     "mongoose": "^8.16.3"
+  },
+  "devDependencies": {
+    "jest": "^30.0.4",
+    "mongodb-memory-server": "^10.1.4",
+    "supertest": "^7.1.3"
   }
 }
