--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.13.1",
   "dependencies": {
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.3"
   },
   "devDependencies": {
