--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "cypress": "^14.5.2",
-    "jest": "^30.0.4"
+    "jest": "^30.0.4",
+    "webpack": "^5.100.2"
   }
 }
