--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "webpack serve --config webpack.config.js",
+    "build": "webpack --config webpack.config.js",
     "test": "jest",
     "test:unit": "jest --coverage",
     "test:integration": "jest --testPathPattern=integration"
@@ -20,10 +20,18 @@
     "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.0",
+    "@babel/preset-env": "^7.28.0",
+    "@babel/preset-react": "^7.27.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
+    "babel-loader": "^10.0.0",
+    "css-loader": "^7.1.2",
     "cypress": "^14.5.2",
+    "html-webpack-plugin": "^5.6.3",
     "jest": "^30.0.4",
-    "webpack": "^5.100.2"
+    "style-loader": "^4.0.0",
+    "webpack": "^5.100.2",
+    "webpack-dev-server": "^5.2.2"
   }
 }
